Modify form actions for Formspree integration
Updated form actions to include placeholders for Formspree endpoints.

--- a/index.html
+++ b/index.html
@@ -294,3 +294,6 @@
     </script>
 </body>
 </html>
+<form id="formRawatJalan" class="hidden" action="/submit-pengaduan-rawat-jalan" method="POST" enctype="multipart/form-data">
+    <form id="formRawatJalan" class="hidden" action="[MASUKKAN ENDPOINT URL FORMSPREE ANDA DI SINI]" method="POST" enctype="multipart/form-data">
+        <form id="formRawatInap" class="hidden" action="[MASUKKAN ENDPOINT URL FORMSPREE ANDA DI SINI]" method="POST" enctype="multipart/form-data">
