Update script URL for Google Apps Script

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     <script>
         // --- KONFIGURASI PENTING ---
         // Ganti URL di bawah ini dengan Web App URL dari Google Apps Script Anda
-        const scriptURL = 'PASTE_WEB_APP_URL_ANDA_DISINI'; 
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbxmJYE6oWTTuoBmWGNkxdRlIqU_M_Fy2QF9bt0jke9jMaZJsfep4CcefOxtMGEI49MD/exec'; 
 
         const formRawatJalan = document.getElementById('formRawatJalan');
         const formRawatInap = document.getElementById('formRawatInap');
