Update logo placeholder text in index.html

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <header>
         <div class="logo-container">
             <!-- Placeholder Logo -->
-            <div class="logo-placeholder">AH</div>
+            <div class="logo-placeholder">AsySyifaHusada</div>
         </div>
         <h1>Suara Anda Membangun Pelayanan Kami</h1>
         <p>Kami berkomitmen untuk memberikan layanan kesehatan terbaik. Kritik, saran, dan pujian Anda adalah energi bagi kami.</p>
