--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
 
     <header>
         <div class="logo-container">
-            <!-- Placeholder Logo -->
-            <div class="logo-placeholder">AsySyifaHusada</div>
+            <!-- kotak Logo -->
+            <div class="logo-kotak">AsySyifaHusada</div>
         </div>
         <h1>Suara Anda Membangun Pelayanan Kami</h1>
         <p>Kami berkomitmen untuk memberikan layanan kesehatan terbaik. Kritik, saran, dan pujian Anda adalah energi bagi kami.</p>
