--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <header>
         <div class="logo-container">
-            <div class="logo-placeholder">ASYIFA HUSADA</div>
+            <div class="logo-placeholder"> KLINIK ASY-SYIFA HUSADA</div>
         </div>
         <h1>Kepuasan Anda Membangun Pelayanan Kami</h1>
         <p>PELAYANANKU ADALAH IBADAHKU SEMOGA LEKAS SEMBUH</p>
@@ -352,7 +352,14 @@
                 <label for="ri_no_kamar">Nomor Kamar/Bangsal (Opsional)</label>
                 <input type="text" id="ri_no_kamar" name="no_kamar" placeholder="Cth: Ruang Melati 3">
             </div>
-
+            <div class="form-group">
+                <label>Jenis Pasien <span style="color: red;">*</span></label>
+                <div style="margin-top: 5px;">
+                    <input type="radio" id="ri_BPJS" name="jenis_pasien" value="BPJS" required>
+                    <label for="ri_BPJS" style="display: inline; font-weight: normal; margin-right: 15px;">BPJS</label>
+                    <input type="radio" id="ri_UMUM" name="jenis_pasien" value="UMUM" required>
+                    <label for="ri_UMUM" style="display: inline; font-weight: normal;">UMUM</label>
+                </div>
             <div class="form-group">
                 <label for="ri_jenis_layanan">Fokus pelayanan <span style="color: red;">*</span></label>
                 <select id="ri_jenis_layanan" name="jenis_layanan" required>
