Change logo class from 'logo-placeholder' to 'logo-kotak'

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <header>
         <div class="logo-container">
-            <div class="logo-placeholder"> KLINIK ASY-SYIFA HUSADA</div>
+            <div class="logo-kotak"> KLINIK ASY-SYIFA HUSADA</div>
         </div>
         <h1>Kepuasan Anda Membangun Pelayanan Kami</h1>
         <p>PELAYANANKU ADALAH IBADAHKU SEMOGA LEKAS SEMBUH</p>
