--- a/index.html
+++ b/index.html
@@ -320,13 +320,13 @@
             </div>
 
             <div class="form-group">
-                <label for="rj_saran_judul">Saran Anda (Judul) <span style="color: red;">*</span></label>
-                <input type="text" id="rj_saran_judul" name="judul_masukan" placeholder="Cth: Antrian Farmasi Terlalu Lama" required>
+                <label for="rj_saran_judul">Saran Anda <span style="color: red;">*</span></label>
+                <input type="text" id="rj_saran_Anda" name="judul_masukan" placeholder="Cth: Antrian Farmasi Terlalu Lama" required>
             </div>
 
             <div class="form-group">
-                <label for="rj_kritik_detail">Kritik & Detail (Maks. 500 Karakter) <span style="color: red;">*</span></label>
-                <textarea id="rj_kritik_detail" name="detail_masukan" rows="6" maxlength="500" required placeholder="Jelaskan secara spesifik agar kami dapat menindaklanjuti."></textarea>
+                <label for="rj_kritik_Anda">Kritik Anda <span style="color: red;">*</span></label>
+                <textarea id="rj_kritik_Anda" name="detail_masukan" rows="6" maxlength="500" required placeholder="Jelaskan secara spesifik agar kami dapat menindaklanjuti."></textarea>
             </div>
             <button type="submit" class="btn-submit">
                 <span class="btn-text">Kirim Masukan Rawat Jalan</span>
