--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <div class="logo-container">
             <div class="logo-kotak"> KLINIK ASY-SYIFA HUSADA</div>
         </div>
-        <h1>PENGADUAN KRITIK DAN SARAN</h1>
+        <h1>FORMULIR KRITIK DAN SARAN</h1>
         <p>PELAYANANKU ADALAH IBADAHKU SEMOGA LEKAS SEMBUH</p>
     </header>
 
