Change form titles for outpatient and inpatient services

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
 
         <form id="formRawatJalan" class="hidden" name="submit-to-google-sheet-rj">
-            <h2>Formulir Masukan Pelayanan Rawat Jalan</h2>
+            <h2>Formulir Pengaduan Pelayanan Rawat Jalan</h2>
             
             <input type="hidden" name="form_type" value="rawat_jalan">
 
@@ -334,7 +334,7 @@
         </form>
 
         <form id="formRawatInap" class="hidden" name="submit-to-google-sheet-ri">
-            <h2>Formulir Masukan Pelayanan Rawat Inap</h2>
+            <h2>Formulir Pengaduan Pelayanan Rawat Inap</h2>
 
             <input type="hidden" name="form_type" value="rawat_inap">
             
